dev/manifests/cluster-config/protected.ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: protected
  labels:
    admission-webhook: enabled
